@@ -1,3 +1,5 @@
 Add: Preset manager (rename, export, import etc)
 Add: Better support for ATxmega devices (They have fuses 0-5 instead of low/high/extended and a few other things)
+Add: Better fuse selector
+Add: Compile avrdude with libftdi support
 Fix: High verbosity level resulting in slow programming caused by slow console output
